2009-05-27  Geoff Norton  <gnorton@novell.com>

	* plugin.cpp: Avoid a double-delete of the splash xaml_loader

2009-05-27  Geoff Norton  <gnorton@novell.com>

	* plugin.cpp|h: Support splash screen.

2009-05-27  Geoff Norton  <gnorton@novell.com>

	* plugin.cpp|h: Ensure we spin up a default application for the xaml
	case as well since <Canvas><StackPanel /></Canvas> works.

2009-05-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-downloader.h:
	* plugin-downloader.cpp: Add support for retrieving response headers
	  and disable cache.

	* cbinding.h: Regenerated.

	* browser-bridge.h: Updated according to downloader API changes.

	* plugin.mdp: Updated.

2009-05-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-downloader.cpp: Don't hard code the verb.

2009-05-25  Chris Toshok  <toshok@ximian.com>

	* plugin-class.cpp (value_to_variant): robustify this and support
	NULL Value*'s.  Fixes crash in DRT #485.

2009-05-23  Chris Toshok  <toshok@ximian.com>

	* plugin-class.cpp, plugin-class.h: add a Control plugin class,
	which exposes "focus".  Should get DRT #250 a little further (and
	keep it from timing out.)

2009-05-21  Rusty Howell  <rhowell@novell.com>

	 * Makefile.am: Changed install dir to DIST_SUBDIRS for make dist

2009-05-21  Andreia Gaita  <avidigal@novell.com>

	* plugin-class.cpp: disable throwing js exceptions on html_object_invoke
	and html_object_get_property, the exceptions get stuck on firefox and
	any subsequent eval call will fail

2009-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* npstream-request.cpp: Fix typo.

2009-05-20  Rusty Howell  <rhowell@novell.com>

	 * Makefile.am: Added install dir to SUBDIRS for 'make dist'

2009-05-20  Larry Ewing  <lewing@novell.com>

	* plugin.cpp (TryLoad): update the error string for 2021 to match
	2.0.

2009-05-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* cbinding.cpp|h: Regenerated.

2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* cbinding.cpp|h: Regenerated.
