@@ -136,6 +136,8 @@ const int Surface::ErrorEvent = 1;
 const int Surface::FullScreenChangeEvent = 2;
 const int Surface::LoadEvent = 3;
 const int Surface::ResizeEvent = 4;
+const int Surface::SourceDownloadCompletedEvent = 5;
+const int Surface::SourceDownloadProgressChangedEvent = 6;
 const int TextBox::SelectionChangedEvent = 22;
 const int TextBox::TextChangedEvent = 23;
 const int TextBoxBase::CursorPositionChangedEvent = 20;
@@ -189,7 +191,7 @@ const char *PASSWORDBOX_Events [] = { "PasswordChanged", NULL };
 const char *PLAYLISTROOT_Events [] = { "BufferingProgressChanged", "CurrentStateChanged", "DownloadProgressChanged", "MediaEnded", "MediaError", "OpenCompleted", "Opening", "Pause", "Play", "SeekCompleted", "Seeking", "Stop", NULL };
 const char *POPUP_Events [] = { "IsOpenChanged", NULL };
 const Type::Kind STRING_Interfaces[] = { Type::ICOMPARABLE, Type::ICOMPARABLE_STRING, Type::ICONVERTIBLE, Type::IEQUATABLE_STRING, Type::IFORMATTABLE };
-const char *SURFACE_Events [] = { "Error", "FullScreenChange", "Load", "Resize", NULL };
+const char *SURFACE_Events [] = { "Error", "FullScreenChange", "Load", "Resize", "SourceDownloadCompleted", "SourceDownloadProgressChanged", NULL };
 const char *TEXTBOX_Events [] = { "SelectionChanged", "TextChanged", NULL };
 const char *TEXTBOXBASE_Events [] = { "CursorPositionChanged", "ModelChanged", NULL };
 const char *TIMELINE_Events [] = { "Completed", NULL };
@@ -473,7 +475,7 @@ Types::RegisterNativeTypes ()
 	types [(int) Type::STYLUSINFO] = new Type (Type::STYLUSINFO, Type::DEPENDENCY_OBJECT, false, false, "StylusInfo", 0, 1, NULL, 0, NULL, (create_inst_func *) stylus_info_new, NULL);
 	types [(int) Type::STYLUSPOINT] = new Type (Type::STYLUSPOINT, Type::DEPENDENCY_OBJECT, false, false, "StylusPoint", 0, 1, NULL, 0, NULL, (create_inst_func *) stylus_point_new, NULL);
 	types [(int) Type::STYLUSPOINT_COLLECTION] = new Type (Type::STYLUSPOINT_COLLECTION, Type::DEPENDENCY_OBJECT_COLLECTION, false, false, "StylusPointCollection", 0, 3, NULL, 0, NULL, (create_inst_func *) stylus_point_collection_new, NULL);
-	types [(int) Type::SURFACE] = new Type (Type::SURFACE, Type::EVENTOBJECT, false, false, "Surface", 4, 5, SURFACE_Events, 0, NULL, NULL, NULL);
+	types [(int) Type::SURFACE] = new Type (Type::SURFACE, Type::EVENTOBJECT, false, false, "Surface", 6, 7, SURFACE_Events, 0, NULL, NULL, NULL);
 	types [(int) Type::SYSTEMTIMESOURCE] = new Type (Type::SYSTEMTIMESOURCE, Type::TIMESOURCE, false, false, "SystemTimeSource", 0, 2, NULL, 0, NULL, NULL, NULL);
 	types [(int) Type::TEXTBLOCK] = new Type (Type::TEXTBLOCK, Type::FRAMEWORKELEMENT, false, false, "TextBlock", 0, 19, NULL, 0, NULL, (create_inst_func *) text_block_new, "Inlines");
 	types [(int) Type::TEXTBOX] = new Type (Type::TEXTBOX, Type::TEXTBOXBASE, false, false, "TextBox", 2, 24, TEXTBOX_Events, 0, NULL, (create_inst_func *) text_box_new, NULL);
