@@ -1,5 +1,11 @@
 2009-05-27  Geoff Norton  <gnorton@novell.com>
 
+	* plugin.cpp|h:
+	* plugin-class.cpp|h|h.in: Support the splash screen progress/completed events
+	* cbinding.h: regen
+
+2009-05-27  Geoff Norton  <gnorton@novell.com>
+
 	* plugin.cpp: Avoid a double-delete of the splash xaml_loader
 
 2009-05-27  Geoff Norton  <gnorton@novell.com>
